<resources>
    <string name="app_name">Service Lane</string>
    <string name="facebook_app_id">262895064464687</string>
    <string name="fb_login_protocol_scheme">fb262895064464687</string>

    <array name="get_started_titles">
        <item>Get listed</item>
        <item>Get found</item>
        <item>Get hired</item>
    </array>
    <array name="get_started_descriptions">
        <item>We connect service providers with clients in Grenada &amp; beyond</item>
        <item>Sign up today to instantly expose your business to Grenada &amp; beyond</item>
        <item>Publish your profile, get new leads &amp; start earning money today</item>
    </array>
    <string name="processing">Processing....</string>
    <string name="get_started">Get started</string>
    <string name="customer">Customer</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="address">Address</string>
    <string name="parish">Parish</string>
    <string name="category">Category</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="proceed_without_login">Proceed without login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_login_failed">Facebook login failed</string>
    <string name="new_sign_up_here">&lt;&lt; Back to sign up</string>
    <string name="have_an_account">Go to login &gt;&gt;</string>
    <string name="by_logging_in">By logging in, you agree to our terms of service and privacy policy</string>
    <string name="by_signing_up">By signing up, you agree to our terms of service and privacy policy</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="identity">Identity</string>
    <string name="reviews">Reviews</string>
    <string name="portfolio">Portfolio</string>
    <string name="terms_of_conditions">Terms of Conditions</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hello">Hello</string>
    <string name="find_help_near_you">Find help near you</string>
    <string name="pick_one_from">Pick one from %1$s providers</string>
    <string name="featured_providers">Featured providers</string>
    <string name="service_price_range">Service price range</string>
    <string name="view_all">View all</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="extend">Extend</string>
    <string name="upgrade">Upgrade</string>
    <string name="close">Close</string>
    <string name="delete_portfolio">Are you sure you want to delete this photo?</string>
    <string name="uploaded_with">Uploaded: %1$s</string>
    <string name="photos_with">Photos (%1$d)</string>
    <string name="services_with">Services (%1$d)</string>
    <string name="reviews_with">Reviews (%1$d)</string>
    <string name="with_words">%1$d words</string>
    <string name="with_reviews">%1$d reviews</string>
    <string name="rate_with">Rate: $%1$s/%2$s</string>
    <string name="create_new_service">Create a new service</string>
    <string name="enter_service_name">Enter the service name</string>
    <string name="enter_service_description">Enter service description</string>
    <string name="rate">$Rate</string>
    <string name="price_from">$ From</string>
    <string name="price_to">$ To</string>
    <string name="select_parish_to_view_top_providers">Select a parish to view the top providers</string>
    <string name="member_since">Member since (%1$s)</string>
    <string name="send_me_an_email">Send me an email</string>
    <string name="my_facebook_page">My facebook page</string>
    <string name="visit_my_website">Visit my website</string>
    <string name="short_bio">SHORT BIO</string>
    <string name="service_packages_with">SERVICE PACKAGES (%1$d)</string>
    <string name="service_package_add_success">Congratulations, you have added a new service package successfully</string>
    <string name="send_message_to_service_lane_support">Send a message to Service Lane support</string>
    <string name="quality_services_at_your_door">Quality services at your door</string>
    <string name="enter_old_password">Enter your old password</string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="re_enter_the_password">Re-enter the new password</string>
    <string name="current_plan">Current plan:</string>
    <string name="started_on">Started on</string>
    <string name="expires_on">Expires on</string>
    <string name="login_web_account_to_manage_plan">To manage your subscriptions\nPlease login to your web account</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload_your_user_photo">Upload your user photo</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="this_will_open_website">This will open on our website</string>
    <string name="i_am_done_paying">I am done paying</string>
    <string name="click_after_paying">Click here after you have finished paying</string>
    <string name="proceed_to_services">Proceed to services</string>
    <string name="proceed_to_photos">Proceed to photos</string>
    <string name="proceed_to_payment">Proceed</string>
    <string name="proceed_to_plans">Proceed to plans</string>

    <string name="msg_sent_success">Message sent successfully</string>
    <string name="msg_update_success">Updated successfully</string>
    <string name="msg_support_error">Please enter the message</string>
    <string name="msg_pwd_old_pwd">Please enter the current password</string>
    <string name="msg_pwd_new_pwd">Please enter the new password</string>
    <string name="msg_pwd_confirm_pwd">The 2 passwords do not match</string>
    <string name="msg_pwd_success">Great! Your password has been updated successfully</string>
    <string name="msg_first_name">Please enter the first name</string>
    <string name="msg_last_name">Please enter the last name</string>
    <string name="msg_email">The email address is invalid</string>
    <string name="msg_password">Please enter your password</string>
    <string name="msg_service_name">Please enter the service name</string>
    <string name="msg_service_description">Please enter the service description</string>
    <string name="msg_service_rate">The amount for rate is invalid</string>
    <string name="msg_service_duration">Please select the duration</string>
    <string name="msg_service_success">Congratulations, you have added a new service package successfully</string>
    <string name="msg_sign_up_success">Congratulations, you have signed up successfully</string>
    <string name="msg_login_to_support">Please login to be able to send message</string>
    <string name="msg_change_plan_success">Congratulations! You have updated the plan successfully</string>
    <string name="msg_sign_up_confirm">To proceed please click the link in the email we just sent to you</string>
    <string name="msg_parish_error">Please select the parish</string>
    <string name="msg_category_error">Please select the categories</string>
    <string name="msg_empty_service_packages">Please enter at least one service</string>
    <string name="msg_max_portfolio">At this time, you can upload 2 photos</string>
    <string name="startup1">1. Profile</string>
    <string name="startup2">2. Services</string>
    <string name="startup3">3. Portfolio</string>
    <string name="startup4">4. Payment</string>
    <string name="msg_startup_profile">To help get you ready, please fill out the information below. The more information you provide the better the chances of getting contacted by customers.</string>
    <string name="msg_startup_profile_email">Thanks, your account has been activated. Now let\'s proceed with setting up your profile</string>
    <string name="msg_startup_profile_alert">Now to help you get set up, fill out your profile, services &amp; Service photos</string>
    <string name="msg_startup_service">Service packages are the groups of solutions that you offer, e.g. an auto-mechanic might have Oil change, 50K Maintenance, Annual Inspection etc.</string>
    <string name="msg_startup_portfolio">Your portfolio will showcase your work. Please upload your best photos. At this time you can upload 2 photos, you will be able to add more later. You may Skip this section &amp; upload photos later.</string>
    <string name="msg_startup_plan">To finish your registration, click the button below to select a plan  from our mobile friendly website.\nAfter you are done paying, click the “I am done paying” button below</string>
    <string name="msg_startup_payment">Success! Your payment has been verified. Welcome aboard</string>
    <string name="msg_startup_payment_fail">Your payment has not been verified yet</string>

    <string name="empty_search">Sorry, we could not find any matches</string>
    <string name="empty_service">Service information not provided</string>
    <string name="empty_portfolio">Portfolio not available</string>
    <string name="empty_review">No reviews yet</string>
    <string name="empty_short_bio">Bio information not provided</string>

    <string name="menu_payment">Payment</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_service_packages">My Service Packages</string>
    <string name="menu_portfolio">My Portfolio</string>
    <string name="menu_plan">My Plans</string>
    <string name="menu_password">My Password</string>
    <string name="menu_status">Account status</string>
    <string name="menu_status_activate">Activate/Deactivate</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_support">Support</string>
    <string name="menu_terms_of_service">Terms of Service</string>
    <string name="menu_privacy_policy">Privacy Policy</string>

    <string name="about_us1">Service Lane is a platform that connects independent Grenadian contractors to people in need of their services. </string>
    <string name="about_us2">The directory helps search, filter, connect, preview and contact local service professionals.</string>
    <string name="about_us3">Service Lane has a strong commitment to quality; we work hard to give our members the best experience.</string>
    <string name="about_us4">Forget running around trying to get things done. With Service Lane, you can get work done easily</string>
</resources>
