<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/spacer_line"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".view.account.PasswordActivity">

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/none"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAppearance="@style/Text" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/none"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAppearance="@style/Text" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/none"
        android:ems="10"
        android:hint="@string/re_enter_the_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAppearance="@style/Text" />

    <Button
        android:id="@+id/btnSave"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_primary"
        android:text="@string/save" />

</LinearLayout>