<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.startup.PaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/startup4"
                android:textAppearance="@style/Text.Bold1"
                android:textColor="@color/darkGrey"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/msg_startup_plan"
                android:textAppearance="@style/Text.Bold"
                android:textColor="#f00" />

            <Button
                android:id="@+id/btnProceed"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_primary"
                android:text="@string/proceed_to_plans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/this_will_open_website"
                    android:textAppearance="@style/Text.Small"
                    android:textColor="@color/darkGrey" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/new_window" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/lightGrey" />


            <Button
                android:id="@+id/btnDone"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_green_s"
                android:text="@string/i_am_done_paying" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/click_after_paying"
                android:textAppearance="@style/Text.Small"
                android:textColor="@color/darkGrey" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>