<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/startup2"
                android:textAppearance="@style/Text.Bold1"
                android:textColor="@color/darkGrey"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/msg_startup_service"
                android:textAppearance="@style/Text.Bold"
                android:textColor="#f00" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnProceed"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_primary"
                android:text="@string/proceed_to_photos" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>