<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:divider="@drawable/spacer_line"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="@+id/imgBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgBanner"
        app:layout_constraintTop_toTopOf="@+id/imgBanner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/none"
                android:ems="10"
                android:hint="@string/enter_service_name"
                android:inputType="text"
                android:padding="4dp"
                android:textAppearance="@style/Text.Small"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Small"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/none"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_service_description"
                android:inputType="textMultiLine"
                android:lines="4"
                android:padding="4dp"
                android:textAppearance="@style/Text.Small"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:divider="@drawable/spacer"
            android:orientation="horizontal"
            android:showDividers="middle">

            <EditText
                android:id="@+id/editRate"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:hint="@string/rate"
                android:inputType="numberDecimal"
                android:padding="4dp"
                android:textAlignment="center"
                android:textAppearance="@style/Text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textAppearance="@style/Text.Bold"
                android:textColor="@color/grey"
                tools:ignore="HardcodedText" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/border">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/pickerDuration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            style="@style/NoPaddingButton"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_red"
            android:text="@string/delete"
            android:textAppearance="@style/Text.Bold"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_primary"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>